# mkdbg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODOS.md
.github/workflows/: ci.yml
bsp/: seam_port.c  wire_port.c
docs/: MKDBG.md
examples/stm32f446/: README.md
examples/stm32f446/scripts/: analysis_engine_host_tests.sh  board_regress.py  bringup_compile.py  bringup_compile_host_tests.sh  bringup_host_tests.sh  bringup_regress.py  bringup_ui.py  bringup_ui_host_tests.sh  build.sh  build_identity_host_tests.sh  build_mkdbg_native_host_tests.sh  ci_install_arm_toolchain_ubuntu.sh  dependency_graph_host_tests.sh  driver_profile_compare.py  driver_profile_compare_regress.py  flash.sh  hil_gate.sh  install_mkdbg_host_tests.sh  install_ovwatch.sh  kdi_driver_regress.py  kdi_host_tests.sh  kdi_irq_regress.py  mkdbg  mkdbg_host_tests.sh  mkdbg_native_cmake_host_tests.sh  mkdbg_native_host_tests.sh  openocd.cfg  ovwatch  ovwatch_host_tests.sh  profile_compare_host_regress.sh  regress_common.py  regression_summary.py  regression_summary_host_tests.sh  semantic_telemetry_host_tests.sh  serial_console.py  serial_ui.py  sonic_lite_host_tests.sh  sonic_regress.py  triage_bundle_host_tests.sh  triage_replay.py  (+11 more)
examples/stm32f446/tests/: analysis_engine_host_tests.c  board.h  bringup_phase_host_tests.c  dependency_graph_host_tests.c  kdi_host_tests.c  seam_host_stub.c  semantic_telemetry_host_tests.c  sonic_lite_host_tests.c  vm32_host_tests.c
examples/stm32f446/tests/fixtures/profile_compare/: baseline.jsonl  candidate_regression.jsonl  candidate_same.jsonl
examples/stm32f446/tests/fixtures/triage/: sample_bundle.json
host/: incident.c  launcher.c  probe.c  seam.c  util.c  wire.c
scripts/: ci_smoke.sh  install.sh
src/: dashboard.c  main.c  parse.c  seam.c  serial.c
startup/: README.md
tools/: build_mkdbg_native.sh  build_mkdbg_native_host_tests.sh  ci_smoke.sh  install_mkdbg.sh  install_mkdbg_host_tests.sh  mkdbg  mkdbg.h  mkdbg_action.c  mkdbg_config.c  mkdbg_core.c  mkdbg_dashboard.c  mkdbg_git.c  mkdbg_host_tests.sh  mkdbg_launcher.c  mkdbg_native.c  mkdbg_native_cmake_host_tests.sh  mkdbg_native_host_tests.sh  mkdbg_process.c  mkdbg_wire.c  seam_main.c  triage_bundle.py
